Add two DTOs, update mapper, controller, and service